logs/iscorpio.plonepm.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/iscorpio'...
Listing './lib/python3.5/site-packages/iscorpio/plonepm'...
Listing './lib/python3.5/site-packages/iscorpio/plonepm/browser'...
Listing './lib/python3.5/site-packages/iscorpio/plonepm/content'...
Listing './lib/python3.5/site-packages/iscorpio/plonepm/interfaces'...
Listing './lib/python3.5/site-packages/iscorpio/plonepm/portlets'...
Listing './lib/python3.5/site-packages/iscorpio/plonepm/profiles'...
Listing './lib/python3.5/site-packages/iscorpio/plonepm/profiles/default'...
Listing './lib/python3.5/site-packages/iscorpio/plonepm/profiles/default/types'...
Listing './lib/python3.5/site-packages/iscorpio/plonepm/skins'...
Listing './lib/python3.5/site-packages/iscorpio/plonepm/skins/PlonePM'...
Listing './lib/python3.5/site-packages/iscorpio/plonepm/skins/PlonePM/scripts'...
Compiling './lib/python3.5/site-packages/iscorpio/plonepm/skins/PlonePM/scripts/getStoryTasks.py'...
***   File "./lib/python3.5/site-packages/iscorpio/plonepm/skins/PlonePM/scripts/getStoryTasks.py", line 72
    return tasksInfo
                   ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/iscorpio/plonepm/tests'...
Listing './lib/python3.5/site-packages/iscorpio/themes'...
Listing './lib/python3.5/site-packages/iscorpio/themes/redmaple'...
Listing './lib/python3.5/site-packages/iscorpio/themes/redmaple/Extensions'...
Listing './lib/python3.5/site-packages/iscorpio/themes/redmaple/profiles'...
Listing './lib/python3.5/site-packages/iscorpio/themes/redmaple/profiles/default'...
Listing './lib/python3.5/site-packages/iscorpio/themes/redmaple/profiles/uninstall'...
Listing './lib/python3.5/site-packages/iscorpio/themes/redmaple/skins'...
Listing './lib/python3.5/site-packages/iscorpio/themes/redmaple/skins/iscorpio_redmaple_styles'...
Listing './lib/python3.5/site-packages/iscorpio.plonepm-2.0b2.post382.egg-info'...
Listing './lib/python3.5/site-packages/iscorpio.themes.redmaple-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
